# adaptive-poker-machine

./: .gitignore  README.md  plan.md  pyproject.toml
docs/: ai_pipeline.md  architecture.md  milestone1.md
notebooks/: train_colab.ipynb
scripts/: play_human.py  play_random.py  play_ui.py  train_local.py
src/poker/: actions.py  belief.py  cards.py  environment.py  evaluator.py  ismcts.py  state.py  value.py
src/world_model/: adapter.py  agent.py  config.py  data.py  heads.py  losses.py  rssm.py  search.py  train.py
tests/: test_actions.py  test_belief.py  test_cards.py  test_environment.py  test_evaluator.py  test_ismcts.py  test_value.py
tests/world_model/: test_adapter.py  test_agent.py  test_data.py  test_heads.py  test_losses.py  test_rssm.py  test_search.py
